
find_package(Boost ${BOOST_MINIMUM_VERSION} REQUIRED COMPONENTS program_options)

INCLUDE(SetupJuggler)

SET(SRC)
LIST(APPEND SRC "main.cpp")

INCLUDE_DIRECTORIES(${VRJ_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(kinect-juggler ${SRC})

SET(LIBS)
LIST(APPEND LIBS ${VRJ_LIBRARIES})
LIST(APPEND LIBS ${Boost_LIBRARIES})

TARGET_LINK_LIBRARIES(kinect-juggler ${LIBS})
