
find_package(Boost ${BOOST_MINIMUM_VERSION} REQUIRED COMPONENTS program_options)

INCLUDE(SetupOgre)
INCLUDE(SetupJuggler)

SET(SRC)
LIST(APPEND SRC "main.cpp")
LIST(APPEND SRC "VRJOgreApp.cpp")

INCLUDE_DIRECTORIES(${VRJ_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(kinect-juggler ${SRC})

SET(LIBS)
LIST(APPEND LIBS ${Boost_LIBRARIES})
LIST(APPEND LIBS ${OGRE_LIBRARIES})
LIST(APPEND LIBS ${VRJ_LIBRARIES})

TARGET_LINK_LIBRARIES(kinect-juggler ${LIBS})
