
find_package(Boost ${BOOST_MINIMUM_VERSION} REQUIRED COMPONENTS program_options)

INCLUDE(SetupOgre)
INCLUDE(SetupJuggler)

SET(SRC)
LIST(APPEND SRC "main.cpp")
LIST(APPEND SRC "OgreUtils.cpp")
LIST(APPEND SRC "VRJOgreApp.cpp")
LIST(APPEND SRC "VRJOgreDummyApp.cpp")

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${VRJ_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(kinect-juggler ${SRC})

SET(LIBS)
LIST(APPEND LIBS ${Boost_LIBRARIES})
LIST(APPEND LIBS ${OGRE_LIBRARIES})
LIST(APPEND LIBS ${VRJ_LIBRARIES})

TARGET_LINK_LIBRARIES(kinect-juggler ${LIBS})
